# gamslib

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  coverage.sh  mkdocs.yml  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml
docs/: index.md
docs/api/: projectconfiguration.md
docs/reference/: index.md
docs/reference/datacite/: access.md  datacite.md  datacite_record.md  files.md  index.md  metadata.md  metadata_additional_descriptions.md  metadata_additional_titles.md  metadata_dates.md  metadata_funding.md  metadata_identifiers.md  metadata_location.md  metadata_models.md  metadata_people.md  metadata_reference.md  metadata_rights.md  metadata_subjects.md  tombstone.md
docs/reference/formatdetect/: formatinfo.md  index.md  magikadetector.md  minimaldetector.md  siegfrieddetector.md  subtype.md
docs/reference/objectcsv/: create_csv.md  dsdata.md  dublincore.md  index.md  manage_csv.md  objectcollection.md  objectcsvmanager.md  objectdata.md  utils.md  xlsx.md
docs/reference/objectdir/: index.md
docs/reference/projectconfiguration/: configuration.md  index.md
docs/reference/sip/: index.md  utils.md  validation.md
reference/gamslib/: index.html
reference/gamslib/formatdetect/: index.html
src/gamslib/: __init__.py  objectdir.py
src/gamslib/datacite/: __init__.py  access.py  common.py  datacite.md  datacite_record.py  files.py  metadata.py  metadata_additional_descriptions.py  metadata_additional_titles.py  metadata_common.py  metadata_dates.py  metadata_funding.py  metadata_identifiers.py  metadata_location.py  metadata_people.py  metadata_reference.py  metadata_rights.py  metadata_subjects.py  tombstone.py  vocabularies.py
src/gamslib/formatdetect/: __init__.py  formatdetector.py  formatinfo.py  jsontypes.py  magikadetector.py  minimaldetector.py  siegfrieddetector.py  xmltypes.py
src/gamslib/objectcsv/: __init__.py  create_csv.py  datastreamscsvfile.py  defaultvalues.py  dsdata.py  dublincore.py  exceptions.py  manage_csv.py  objectcollection.py  objectcsv.py  objectcsvfile.py  objectcsvmanager.py  objectdata.py  utils.py  xlsx.py
src/gamslib/projectconfiguration/: __init__.py  configuration.py  utils.py
src/gamslib/sip/: __init__.py  sipjson.py  utils.py
src/gamslib/validation/: __init__.py  alwaysvalidvalidator.py  combined_resolver.py  jsonvalidator.py  (+7 more)
tests/: test_objectdir.py
tests/datacite/: test_access.py  test_alternate_identifier.py  test_datacite.py  test_edtfstring.py  test_files.py  test_metadata.py  test_tombstone.py
tests/formatdetect/: conftest.py  test_formatdetect_init.py  test_formatinfo.py  test_generic_detector.py  test_jsontypes.py  test_magikadetector.py  test_minimaldetector.py  test_siegfrieddetector.py  test_xmltypes.py
tests/objectcsv/: conftest.py  test_create_csv.py  test_csvutils.py  test_datastreamcsvfile.py  test_defaultvalues.py  test_dsdata.py  test_dublincore.py  test_exceptions.py  test_manage_csv.py  test_objectcollection.py  test_objectcsv.py  test_objectcsvfile.py  test_objectcsvmanager.py  test_objectdata.py  test_utils.py  test_xlsx.py
tests/projectconfiguration/: test_cfg_utils.py  test_configuration.py  test_init.py
tests/sip/: conftest.py  test_schema.py  test_sipjson.py  test_siputils.py
tests/validation/: Xtest_xmlvalidator.py  test_alwaysvalidvalidator.py  test_combined_resolver.py  test_schemainfo.py  test_validation_package_init.py  test_validationresult.py  test_xml_schemadetector.py  test_xmlvalidator.py  test_xmlvalidator_schemaprovider.py  test_xmlvalidator_schemavalidator_dtd.py  test_xmlvalidator_schemavalidator_rnc.py  test_xmlvalidator_schemavalidator_rng.py  test_xmlvalidator_schemavalidator_schematron.py  test_xmlvalidator_schemavalidator_xsd.py  test_xmlvalidator_schemavalidators.py  test_xmvalidator_xsd_schemavalidator.py
(+57 files in other folders)
