[project]
name = "gamslib"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gunter Vasold", email = "gunter.vasold@uni-graz.at" },
    { name = "Fabio Tosques", email = "fabio.tosques@uni-graz.at" }
]
dependencies = [
    "pylightxl>=1.61",
    "pydantic>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    "pytest-datadir>=1.5.0",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.389",
    "toml>=0.10.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gamslib"]
