[project]
name = "gamslib"
version = "0.8.3"
description = "Modules and subpackages used in various GAMS5 related projects"
authors = [
    { name = "Gunter Vasold", email = "gunter.vasold@uni-graz.at" },
    { name = "Fabio Tosques", email = "fabio.tosques@uni-graz.at" }
]
dependencies = [
    "pylightxl>=1.61",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "uritools>=5.0.0",
    "tomlkit>=0.13.3",
    "rnc2rng>=2.7.0",
    "jsonschema>=4.25.1",
    "pygfried>=0.12.0",
    "pillow>=12.1.0",
    "pytest-datadir>=1.8.0",
    "gams-xml-catalog>=0.6.3",
]
readme = "README.md"
requires-python = ">= 3.11"
keywords = ["GAMS"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DHGraz/gamslib"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/DHGraz/gamslib"
Issues = "https://github.com/DHGraz/gamslib/issues"
Changelog = "https://github.com/DHGraz/gamslib/blob/main/CHANGELOG.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# use install gamslib[saxon] to install saxon
[project.optional-dependencies]
saxon = [
    "saxonche>=12.9.0",
]
magika = [
    "magika>=1.0.1",
]

[dependency-groups]
dev = [
    # for testing we want the full install
    "gamslib[saxon,magika]",
    "pytest>=8.4.2",
    "pytest-datadir>=1.8.0",
    "pytest-cov>=7.0.0",
    "toml>=0.10.2",
    "ruff>=0.14.0",
    "pylint>=4.0.1",
    "pyright>=1.1.406",
    "pdoc3>=0.11.6",
    "responses>=0.25.8",
    "pytest-mock>=3.15.1",
    "zensical>=0.0.33",
    "mkdocstrings-python>=2.0.3",
    "freezegun>=1.5.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
    ".uv-cache/**",
    ".venv/**",
    "build/**",
    "dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gamslib"]

[tool.ruff.lint]
select = ["PL", "RUF", "SIM"]

